--- a/OpenClaw/src/OpenClaw.Api/appsettings.Development.json
+++ b/OpenClaw/src/OpenClaw.Api/appsettings.Development.json
@@ -19,9 +19,9 @@
     "Enrich": ["FromLogContext"]
   },
   "Database": {
-    "Provider": "Sqlite",
-    "ConnectionString": "Data Source=OpenClaw.sqlite",
-    "DatabaseName": "WedaTemplate"
+    "Provider": "PostgreSql",
+    "ConnectionString": "Host=localhost;Port=5433;Database=openclaw_dev;Username=postgres;Password=postgres",
+    "DatabaseName": "OpenClaw"
   },
   "Authentication": {
     "Enabled": true
