--- a/OpenClaw/src/OpenClaw.Cli/OpenClaw.Cli.csproj
+++ b/OpenClaw/src/OpenClaw.Cli/OpenClaw.Cli.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\OpenClaw.Application\OpenClaw.Application.csproj" />
     <ProjectReference Include="..\OpenClaw.Infrastructure.Llm.Ollama\OpenClaw.Infrastructure.Llm.Ollama.csproj" />
     <ProjectReference Include="..\..\skills\OpenClaw.Skills.FileSystem\OpenClaw.Skills.FileSystem.csproj" />
+    <ProjectReference Include="..\..\skills\OpenClaw.Skills.Shell\OpenClaw.Skills.Shell.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
