--- a/OpenClaw/src/OpenClaw.Cli/OpenClaw.Cli.csproj
+++ b/OpenClaw/src/OpenClaw.Cli/OpenClaw.Cli.csproj
@@ -5,6 +5,7 @@
     <ProjectReference Include="..\OpenClaw.Infrastructure.Llm.Ollama\OpenClaw.Infrastructure.Llm.Ollama.csproj" />
     <ProjectReference Include="..\..\skills\OpenClaw.Skills.FileSystem\OpenClaw.Skills.FileSystem.csproj" />
     <ProjectReference Include="..\..\skills\OpenClaw.Skills.Shell\OpenClaw.Skills.Shell.csproj" />
+    <ProjectReference Include="..\..\skills\OpenClaw.Skills.Http\OpenClaw.Skills.Http.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
