--- a/OpenClaw/Directory.Packages.props
+++ b/OpenClaw/Directory.Packages.props
@@ -18,6 +18,7 @@
     <PackageVersion Include="Microsoft.Extensions.Resilience" Version="10.3.0" />
     <PackageVersion Include="Microsoft.OpenApi" Version="2.3.0" />
     <PackageVersion Include="OllamaSharp" Version="5.4.16" />
+    <PackageVersion Include="OpenAI" Version="2.8.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="10.0.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Filters" Version="10.0.1" />
     <!-- Entity Framework -->
