--- a/OpenClaw/src/OpenClaw.Api/appsettings.json
+++ b/OpenClaw/src/OpenClaw.Api/appsettings.json
@@ -30,5 +30,12 @@
       "Username": "",
       "Password": ""
     }
+  },
+  "OpenTelemetry": {
+    "Enabled": true,
+    "ServiceName": "OpenClaw",
+    "ServiceVersion": "1.0.0",
+    "Dashboard": "Aspire",
+    "OtlpEndpoint": "http://localhost:4317"
   }
 }
