--- a/OpenClaw/docker-compose.yml
+++ b/OpenClaw/docker-compose.yml
@@ -6,10 +6,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5001:5001"
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - Database__Provider=PostgreSql
       - Database__ConnectionString=Host=postgres;Database=openclaw_dev;Username=postgres;Password=postgres
+      - OpenTelemetry__OtlpEndpoint=http://host.docker.internal:4317
+      - OLLAMA_URL=http://host.docker.internal:11434
     depends_on:
       postgres:
         condition: service_healthy
