--- a/OpenClaw/src/OpenClaw.Hosting/OpenClaw.Hosting.csproj
+++ b/OpenClaw/src/OpenClaw.Hosting/OpenClaw.Hosting.csproj
@@ -14,6 +14,11 @@
     <PackageReference Include="Serilog.Extensions.Hosting" />
     <PackageReference Include="Serilog.Settings.Configuration" />
     <PackageReference Include="Serilog.Sinks.Console" />
+    <!-- OpenTelemetry -->
+    <PackageReference Include="OpenTelemetry" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" />
   </ItemGroup>
 
   <ItemGroup>
